apps/home-services/mcmap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-map
  namespace: home-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-map
  template:
    metadata:
      labels:
        app: minecraft-map
    spec:
      containers:
      - name: caddy
        image: caddy:latest
        ports:
        - containerPort: 2019
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
        volumeMounts:
        - mountPath: /usr/share/caddy
          name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: mcmap-pvc
