apps/home-services/mcmap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-map-ingress
  namespace: home-services
spec:
  tls:
  - hosts:
    - minecraft.domain.com
    secretName: domain-com-tls
  rules:
  - host: minecraft.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: caddy
            port:
              number: 80
